exports[`BpkLabel should render correctly 1`] = `
<label
  className="bpk-label">
  Origin
</label>
`;

exports[`BpkLabel should render correctly with a "className" attribute 1`] = `
<label
  className="bpk-label test">
  Origin
</label>
`;

exports[`BpkLabel should render correctly with a "required" attribute 1`] = `
<label
  className="bpk-label">
  Origin
  <span
    className="bpk-label__asterisk">
    *
  </span>
</label>
`;

exports[`BpkLabel should render correctly with a "white" attribute 1`] = `
<label
  className="bpk-label bpk-label--white">
  Origin
</label>
`;
